--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
         border: solid .2em #fff;
         height: 90vh;
       }
+      footer {
+        justify-content: center;
+      }
     </style>
 </head>
 <body>
     <div id="score"></div>
     <canvas id="tetris" width="240" height="400" />
     <script src="tetris.js"></script>
+    <footer>
+      Made By Bobby Robinson
+    </footer>
 </body>
 </html>
